# modelServer

./: .gitignore  README.md  pyproject.toml
modelserver/: embedding.py
tests/: serverProtocol.json
tests/data/: ArubaWikipedia.html  arubaWikipedia.txt
